Fixed top and bottom bars on mobile

--- a/style.css
+++ b/style.css
@@ -12,13 +12,9 @@
 html, body {
     height: 100vh;
 
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 45px 1fr 45px;
-    grid-template-areas:
-    'h'
-    'p'
-    'n';
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 svg {
@@ -60,8 +56,9 @@ button {
 /* Header */
 .header {
     width: 100%;
-    height: 100%;
-    grid-area: h;
+    height: 45px;
+    position: fixed;
+    top: 0; left: 0;
 
     display: flex;
     flex-direction: row;
@@ -155,8 +152,7 @@ button {
 /* Main Content */
 .page {
     width: 100%;
-    height: 100%;
-    grid-area: p;
+    height: calc(100% - 90px);
     overflow: auto;
 
     display: flex;
@@ -458,8 +454,9 @@ button {
 /* Navbar */
 .navbar {
     width: 100%;
-    height: 100%;
-    grid-area: n;
+    height: 45px;
+    position: fixed;
+    bottom: 0; right: 0;
 
     display: flex;
     flex-direction: row;
@@ -516,10 +513,7 @@ button {
 
 @media (min-width: 1024px) {
     body {
-        grid-template-areas:
-        'h'
-        'p'
-        'p';
+        justify-content: flex-end;
     }
 
     .header {
@@ -553,6 +547,7 @@ button {
 
     .page {
         background-color: var(--secondary);
+        height: calc(100% - 45px);
     }
     .page section {
         max-width: 975px;
